--- a/cart.html
+++ b/cart.html
@@ -239,6 +239,71 @@
                     </li>
                 </ul>
             </div>
+            <div class="header-mb">
+                <div class="drop">
+                    <div class="drop-btn">MENU <i class="fa-solid fa-bars"></i>
+                        <div class="submenu2">
+                            <div class = "close"><span class="close-icon"> <i class="fa-solid fa-x"></i> </span></div>
+                            <ul>
+                                <li>Home <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Pages <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Shop <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Portfolio <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Blog <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Elements <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <section class="desktop-sidebar-slider-menu">
                 <span onclick="closeNav()" class="close-icon"> <i class="fa-solid fa-x"></i> </span>
                 <div class="desktop-sidebar-slider-inner">
@@ -307,7 +372,6 @@
             </section>
         </section>
     </div>
-
 
 
     <div class="cart-title-img">
