--- a/index.html
+++ b/index.html
@@ -240,6 +240,71 @@
                     </li>
                 </ul>
             </div>
+            <div class="header-mb">
+                <div class="drop">
+                    <div class="drop-btn">MENU <i class="fa-solid fa-bars"></i>
+                        <div class="submenu2">
+                            <div class = "close"><span class="close-icon"> <i class="fa-solid fa-x"></i> </span></div>
+                            <ul>
+                                <li>Home <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Pages <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Shop <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Portfolio <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Blog <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Elements <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <section class="desktop-sidebar-slider-menu">
                 <span onclick="closeNav()" class="close-icon"> <i class="fa-solid fa-x"></i> </span>
                 <div class="desktop-sidebar-slider-inner">
@@ -368,19 +433,12 @@
     <section class="index-product-area">
         <div class="prod-category-filter">
             <div class="prod-category">
-                <a href="">ALL</a>
-                <a href="">home decor</a>
-                <a href="">Lighting</a>
-                <a href="">Decoration</a>
-                <a href="">Vases</a>
-                <a href="">Basics</a>
+
             </div>
             <div class="filter">Filter <i class="fa-solid fa-sort-down"></i></div>
         </div>
         <div class="products">
-            <div class="product">
-                
-            </div>
+            
         </div>
     </section>
 
