--- a/product-list.html
+++ b/product-list.html
@@ -241,6 +241,71 @@
                     </li>
                 </ul>
             </div>
+            <div class="header-mb">
+                <div class="drop">
+                    <div class="drop-btn">MENU <i class="fa-solid fa-bars"></i>
+                        <div class="submenu2">
+                            <div class = "close"><span class="close-icon"> <i class="fa-solid fa-x"></i> </span></div>
+                            <ul>
+                                <li>Home <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Pages <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Shop <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Portfolio <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Blog <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                                <li>Elements <i class="fa-solid fa-play"></i>
+                                    <ul>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                        <li>Lorem.</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <section class="desktop-sidebar-slider-menu">
                 <span onclick="closeNav()" class="close-icon"> <i class="fa-solid fa-x"></i> </span>
                 <div class="desktop-sidebar-slider-inner">
@@ -319,25 +384,21 @@
 
         <aside class="product-list-sidebar">
             <div class="product-sorting-by">
-                <h5>Sort by</h5>
+                <!-- <h5>Sort by</h5>
                 <ul>
                     <li><a href="">Begie</a></li>
-                </ul>
+                </ul> -->
             </div>
             <div class="product-by-color">
                 <h5>Color</h5>
                 <ul>
-                    <li><a class="chosen" href="">Begie</a> <span>(10)</span></li>
-                    <li><a href="">Begie</a> <span>(10)</span></li>
-                    <li><a href="">Begie</a> <span>(10)</span></li>
+
                 </ul>
             </div>
             <div class="product-by-material">
                 <h5>Material</h5>
                 <ul>
-                    <li><a class="chosen" href="">Begie</a> <span>(10)</span></li>
-                    <li><a href="">Begie</a> <span>(10)</span></li>
-                    <li><a href="">Begie</a> <span>(10)</span></li>
+
                 </ul>
             </div>
             <div class="product-by-price">
@@ -345,17 +406,17 @@
 
                 <div class="range_container">
                     <div class="sliders_control">
-                       <input id="fromSlider" type="range" value="10" min="0" max="100"/>
-                       <input id="toSlider" type="range" value="30" min="0" max="100"/>
+                       <input id="fromSlider" type="range" />
+                       <input id="toSlider" type="range" />
                     </div>
                     <div class="form_control">
                       <div class="form_control_container">
                           <div class="form_control_container__time">$</div>
-                          <input class="form_control_container__time__input" type="number" id="fromInput" value="10" min="0" max="100"/>
+                          <input class="form_control_container__time__input" type="number" id="fromInput" />
                         </div>
                         <div class="form_control_container">
                           <div class="form_control_container__time">$</div>
-                          <input class="form_control_container__time__input" type="number" id="toInput" value="30" min="0" max="100"/>
+                          <input class="form_control_container__time__input" type="number" id="toInput" />
                         </div>
                     </div>
                 </div>
